# pgquack

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: create_zst_corpus.rs
scripts/: package_loadable_extension.py  test_package_loadable_extension.py
src/: cache.rs  engine.rs  extension.rs  lib.rs  main.rs  parser.rs  reader.rs
test_corpus/: boolean_formats.sql  carriage_returns.sql  comments_and_set.sql  complex_types.sql  date_array_types.sql  empty_table.sql  escaped_octals.sql  escaped_strings.sql  float_types.sql  generate_corpus.py  invalid_typed_value.sql  json_types.sql  malformed_lines.sql  mixed_case_types.sql  multiple_tables.sql  multiple_tables.sql.zst  no_newline_eof.sql  null_representations.sql  null_representations.sql.zst  numeric_edge_cases.sql  parser_skipped_rows.sql  postgres_12_dump.sql  postgres_17_dump.sql  quoted_identifiers.sql  reordered_copy_columns.sql  simple_users.sql  special_table_names.sql  unicode_data.sql  unrelated_parser_skipped_rows.sql  unsupported_statements.sql  uuid_types.sql
tests/: integration_tests.rs
