[package]
name = "pgquack"
version = "0.2.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled", "chrono"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
flate2 = "1"
zstd = "0.13"
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
